// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CModalTitle customize 1`] = `
<div>
  <h3
    class="modal-title bazinga"
  >
    Test
  </h3>
</div>
`;

exports[`loads and displays CModalTitle component 1`] = `
<div>
  <h5
    class="modal-title"
  >
    Test
  </h5>
</div>
`;
